# gpufetch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.sh  gpufetch.1
.github/workflows/: lockdown.yml
cmake/: FindPCIUTILS.cmake
src/common/: args.c  args.cpp  args.hpp  ascii.hpp  colors.hpp  global.c  global.cpp  global.hpp  gpu.cpp  gpu.hpp  main.c  main.cpp  master.cpp  master.hpp  pci.cpp  pci.hpp  printer.cpp  printer.hpp  sort.cpp  sort.hpp  uarch.cpp  uarch.hpp
src/cuda/: chips.hpp  cuda.cpp  cuda.hpp  gpufetch_helper_cuda.hpp  nvmlb.cpp  nvmlb.hpp  pci.cpp  pci.hpp  uarch.cpp  uarch.hpp
src/hsa/: chips.hpp  hsa.cpp  hsa.hpp  uarch.cpp  uarch.hpp
src/intel/: check.sh  chips.hpp  cpuid.cpp  cpuid.hpp  intel.cpp  intel.hpp  pci.cpp  pci.hpp  uarch.cpp  uarch.hpp  udev.cpp  udev.hpp
